Solve layout margins with padding (otherwise we break the layout)

--- a/src/stylesheets/app.sass
+++ b/src/stylesheets/app.sass
@@ -70,12 +70,12 @@ body.home
 	.projects
 		+grid-row
 
-		margin:
+		padding:
 			left: 0.5rem
 			right: 0.5rem
 
 		+breakpoint(medium up)
-			margin:
+			padding:
 				left: 2rem
 				right: 2rem
 
@@ -183,9 +183,10 @@ body.project
 
 	.contents, .related
 		+grid-row
-		margin:
-			left: 4rem
-			right: 4rem
+		+breakpoint(medium up)
+			padding:
+				left: 3.4rem
+				right: 3.4rem
 	
 	.contents
 
